--- a/domMan.html
+++ b/domMan.html
@@ -3,14 +3,15 @@
   <head>
     <title>ALAB DOM Manipulation</title>
     <meta charset="UTF-8" />
+    <script defer src="domMan.js"></script>
+    <link rel="stylesheet" href="domMan.css">
   </head>
 
   <body>
     <header>
       <nav id="top-menu"></nav>
+      
     </header>
     <main></main>
-
-    <script src="domMan.css"></script>
   </body>
 </html>
